--- a/Implementation_of_K_Nearest_Neighbors_(KNN)_using_the_Iris_dataset.ipynb
+++ b/Implementation_of_K_Nearest_Neighbors_(KNN)_using_the_Iris_dataset.ipynb
@@ -83,10 +83,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 57
+          "height": 80
         },
         "id": "n0m1ojJA1lne",
-        "outputId": "1bf648bc-538f-42cb-a462-80ed306b2877"
+        "outputId": "2ad37cd5-7642-4183-d317-5140614a8e10"
       },
       "execution_count": 3,
       "outputs": [
@@ -526,7 +526,7 @@
       "metadata": {
         "id": "c7zCMO2c1-s2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -544,7 +544,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUnFftn21r4z",
-        "outputId": "c9007f35-1c01-4822-d260-e272bd02414f"
+        "outputId": "8b23b8ba-1a4d-4dac-a1d5-e27f32bb2aa7"
       },
       "execution_count": 4,
       "outputs": [
@@ -552,23 +552,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 1.00\n",
-            "Confusion Matrix:\n",
-            "[[10  0  0]\n",
-            " [ 0  9  0]\n",
-            " [ 0  0 11]]\n",
-            "\n",
-            "Classification Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00        10\n",
-            "           1       1.00      1.00      1.00         9\n",
-            "           2       1.00      1.00      1.00        11\n",
-            "\n",
-            "    accuracy                           1.00        30\n",
-            "   macro avg       1.00      1.00      1.00        30\n",
-            "weighted avg       1.00      1.00      1.00        30\n",
-            "\n"
+            "Accuracy: 1.00\n"
           ]
         }
       ]
@@ -590,7 +574,7 @@
           "height": 472
         },
         "id": "afeepz8P1_NF",
-        "outputId": "d64c3e73-21fc-40d6-a17b-cefb7a1221f0"
+        "outputId": "b62aef6f-6149-42c4-f951-4b24193f69f1"
       },
       "execution_count": 5,
       "outputs": [
